[gd_scene load_steps=2 format=3 uid="uid://btm1viwtchlmp"]

[ext_resource type="Script" path="res://MenuScenes/StartScreen.gd" id="1_s5tqw"]

[node name="StartScreen" type="Node2D"]
script = ExtResource("1_s5tqw")

[node name="Label" type="Label" parent="."]
offset_right = 1151.0
offset_bottom = 122.0
theme_override_font_sizes/font_size = 72
text = "GAME TITLE GOES HERE"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
offset_left = 479.0
offset_top = 171.0
offset_right = 708.0
offset_bottom = 248.0
text = "Start Game"

[node name="HowToButton" type="Button" parent="."]
offset_left = 477.0
offset_top = 282.0
offset_right = 707.0
offset_bottom = 361.0
text = "How to Play"

[node name="QuitButton" type="Button" parent="."]
offset_left = 483.0
offset_top = 395.0
offset_right = 708.0
offset_bottom = 474.0
text = "Quit Game"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HowToButton" to="." method="_on_how_to_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
